Fixed broken layout in user profile header

--- a/wcfsetup/install/files/style/ui/userProfile.scss
+++ b/wcfsetup/install/files/style/ui/userProfile.scss
@@ -278,6 +278,10 @@
 }
 
 .userProfileDetails {
+	@include screen-md-up {
+		min-height: 94px;
+	}
+	
 	> .layoutBoundary {
 		@include screen-md-up {
 			padding: 20px 20px 20px 208px;
